crates/vue_oxlint_jsx/src/test/snapshots/module_record/pass_modules_no-imports_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/mod.rs
expression: result
---
Module Record: ModuleRecord {
    has_module_syntax: true,
    requested_modules: {},
    import_entries: Vec(
        [],
    ),
    local_export_entries: Vec(
        [
            ExportEntry {
                span: Span {
                    start: 0,
                    end: 0,
                },
                statement_span: Span {
                    start: 0,
                    end: 0,
                },
                module_request: None,
                import_name: Null,
                export_name: Default(
                    Span {
                        start: 0,
                        end: 0,
                    },
                ),
                local_name: Null,
                is_type: false,
            },
        ],
    ),
    indirect_export_entries: Vec(
        [],
    ),
    star_export_entries: Vec(
        [],
    ),
    exported_bindings: {},
    dynamic_imports: Vec(
        [],
    ),
    import_metas: Vec(
        [],
    ),
}
